add font, setup styling, add ugly ass js code for tv

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ Icon
 # Editors
 # (sensitive workspace files)
 # ---------------------------
+*.sublime-workspace
 /.vscode
 /.idea
 
@@ -47,3 +48,4 @@ Icon
 # ---------------
 
 /site/config/.license
+node_modules
