--- a/site/blueprints/pages/tvitem.yml
+++ b/site/blueprints/pages/tvitem.yml
@@ -2,6 +2,9 @@ title: TV Item
 preset: page
 
 fields:
+  link:
+    label: Add the referred link
+    type: url
   visual:
     label: Select a file...
     type: files
