add hidden text

--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -5,3 +5,7 @@ fields:
     label: Body
     type: textarea
     size: large
+  hidden_text:
+    label: Hidden body
+    type: textarea
+    size: large
