--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "supertheme",
-    "version": "4.0.67",
+    "version": "4.0.70",
     "description": "",
     "main": "gulpFile.js",
     "scripts": {
@@ -23,6 +23,7 @@
         "gulp-bump": "^3.2.0",
         "gulp-chmod": "^3.0.0",
         "gulp-concat": "^2.6.1",
+        "gulp-connect-php": "^1.0.3",
         "gulp-eslint": "^6.0.0",
         "gulp-if": "^3.0.0",
         "gulp-imagemin": "^7.1.0",
