--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -8,18 +8,6 @@ num: date
 # Each page can have an icon that is shown in page listings when no preview image is available.
 icon: 📖
 
-# Custom descriptions for each page status depending on use case
-# More about page status: https://getkirby.com/docs/reference/panel/blueprints/page#statuses
-status:
-  draft:
-    label: Draft
-    text: The note is still in draft mode. It can only be seen by editors with panel access.
-  unlisted:
-    label: In Review
-    text: The note is online and can be visited with the direct URL. The team must still give the final go to publish it.
-  listed:
-    label: Published
-    text: The note is online and listed in the blog
 
 # Define the form layout with two columns
 # Columns are optional but help structure the form layout
@@ -31,13 +19,22 @@ columns:
       cover: 
         type: files
         multiple: false
-        query: page.images.template('image')
-        uploads:
-          template: image
+        uploads: false
+     
       description:
+        type: writer
+      text:
+        type: blocks
+      notes:
         type: writer
       line:
         type: line
+      other_files: 
+        label: Other relevant files
+        layout: cards
+        type: files
+        multiple: true
+        uploads: false
       todos:
         label: Todos
         type: structure
@@ -53,6 +50,7 @@ columns:
             label: Description
             width: 3/4
             type: text
+          
          
         
 
@@ -68,17 +66,28 @@ columns:
           # Here we use a files field defined in `/site/blueprints/field/cover.yml`
           client:
             type: text
+          werkgever:
+            type: text
+          materials:
+            type: text
           date:
-            type: date
-            time: false
-            default: now
-            display: YYYY
-            calendar: false
+            type: text
           author:
             type: users
+          complete:
+            label: Complete
+            type: toggle
+            default: "no"
+            text: 
+              - "no"
+              - "yes"
           # Fields types can be added using the shortcut `fieldname: true`
           # (however, you can only use a fieldname once per page and this only makes sense for simple fields without configuration)
           tags: true
       files:
         type: files
+        sortable: true
+        layout: gallery
+        alt: true
+
       
